2009-07-25 22:54-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSAlert.m: Offset color by less in -resetWindow.  Remove
	redundant logic for calling the "didEnd" method in the NSBeginSheet...
	functions.
	* Source/NSApplication.m: Add code to reset parent window in 
	beginSheet:... method.  Also added check to make sure the
	modalDelegate is not nil.

2009-07-25 20:54-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSAlert.m: Remove category for setAttachedSheet method.
	* Source/NSApplication.m: Added private category to add 
	setAttachedSheet: to NSWindow.  Modified beginSheet:... method
	to call the new method with the sheet that is associated with it.

2009-07-25 20:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSAlert.m: GSAlertSheet - removed unecessary parentWindow 
	and  container ivars in interface declaration.  Removed uneeded
	accessors for parentWindow and contentRect.  Added check in
	frameFromParentWindowFrame to check to see if parent is initialized
	prior to using it.   Removed NSBox in the init.. method since it 
	could cause issues with drawing.   Added code to lighten the 
	color of the background of the sheet relative to the parent window.

2009-07-24 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m (-initWithCoder:, -setTextContainer:):
	Attempt to resolve the memory issues when coding a text container.

2009-07-21 15:06-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSFontDescriptor.h: Correct mispelling pointed
	out by David Chisnall.

2009-07-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m: Add include needed for Windows.

2009-07-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m (-_printPaginateWithInfo:knowsRange:, -_print):
	Try to handle not set print information more graceful.
	
2009-07-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPrintOperation.m (-_printPaginateWithInfo:knowsRange:):