@@ -109,7 +109,7 @@ extern NSString *NSFontVariationAxisNameKey;
 
 + (id) fontDescriptorWithFontAttributes: (NSDictionary *)attributes;
 + (id) fontDescriptorWithName: (NSString *)name
-                         size: (float)size;
+                         size: (CGFloat)size;
 #if OS_API_VERSION(MAC_OS_X_VERSION_10_4, GS_API_LATEST)
 + (id) fontDescriptorWithName: (NSString *)name
                        matrix: (NSAffineTransform *)matrix;
@@ -124,16 +124,19 @@ extern NSString *NSFontVariationAxisNameKey;
 - (NSFontDescriptor *) fontDescriptorWithFace: (NSString *)face;
 - (NSFontDescriptor *) fontDescriptorWithFamily: (NSString *)family;
 - (NSFontDescriptor *) fontDescriptorWithMatrix: (NSAffineTransform *)matrix;
-- (NSFontDescriptor *) fontDescriptorWithSize: (float)size;
+- (NSFontDescriptor *) fontDescriptorWithSize: (CGFloat)size;
 - (NSFontDescriptor *) fontDescriptorWithSymbolicTraits:
   (NSFontSymbolicTraits)traits;
 - (NSArray *) matchingFontDescriptorsWithMandatoryKeys: (NSSet *)keys;
 
 - (id) objectForKey: (NSString *)attribute;
 - (NSAffineTransform *) matrix;
-- (float) pointSize;
+- (CGFloat) pointSize;
 - (NSString *) postscriptName;
 - (NSFontSymbolicTraits) symbolicTraits;
+#endif
+#if OS_API_VERSION(MAC_OS_X_VERSION_10_5, GS_API_LATEST)
+- (NSFontDescriptor *) matchingFontDescriptorWithMandatoryKeys: (NSSet *)keys;
 #endif
 
 @end
